<resources>
    <string name="app_name">BinaryVedaAssignment</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="collector">me as a collector</string>
    <string name="my_app">track my application</string>
    <string name="lorem">lorem ipsum</string>
    <string name="is_used">is used</string>
    <string name="content"> Content Copyright reserved.</string>
    <string name="john">john.doe</string>
    <string name="dashboard">My dashboard</string>
    <string name="lorem_description_last">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lorem_description_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
</resources>