<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_combinedshape" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_group301copy" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:paddingBottom="30dp"
            android:paddingTop="3dp"
            android:text="@string/description"
            android:textAlignment="center"
            android:textColor="@color/warm_grey"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnRegester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg"
                android:drawableStart="@drawable/ic_group3copy__1_"
                android:drawablePadding="7dp"
                android:paddingStart="10dp"
                android:paddingTop="7dp"
                android:paddingEnd="10dp"
                android:paddingBottom="7dp"
                android:text="register"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:text="@string/collector"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_group3copy3"
            android:drawablePadding="10dp"
            android:text="@string/my_app"
            android:textColor="@color/corn_blue"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group"
            android:layout_marginTop="60dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lorem_description"
            android:textAlignment="gravity"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group2"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem_2"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group4"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem_3"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description_3"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group14copy2"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem_4"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description_3"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group7"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem_5"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description_3"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group10"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem_6"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description_last"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group14"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/is_used"
                android:layout_marginTop="-5dp"
                android:layout_below="@id/tv_lorem_7"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description_3"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:textAlignment="viewStart"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group15"
            android:layout_marginTop="40dp"
            android:layout_marginStart="25dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_lorem_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/lorem"
                android:textSize="30dp"
                android:textAlignment="viewStart"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_lorem_8"
                android:layout_marginTop="-5dp"
                android:text="@string/is_used"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="30dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_description_last"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:paddingBottom="10dp"
            android:textAlignment="viewStart"/>

        <include layout="@layout/bottom_content_layout"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>